src/y.output

state 0
	$accept: .Root $end 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Root  goto 1
	Expr  goto 2
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 1
	$accept:  Root.$end 

	$end  accept
	.  error


state 2
	Root:  Expr.    (1)
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	LSBRACKET  shift 30
	OR  shift 29
	AND  shift 28
	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 1 (src line 45)


state 3
	Expr:  NUMBER.    (2)

	.  reduce 2 (src line 50)


state 4
	Expr:  STRING.    (3)

	.  reduce 3 (src line 58)


state 5
	Expr:  BOOLEAN.    (4)

	.  reduce 4 (src line 59)


state 6
	Expr:  NULL.    (5)

	.  reduce 5 (src line 66)


state 7
	Expr:  LBRACKET.Expr RBRACKET 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 31
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 8
	Expr:  IF.Expr THEN Expr ELSE Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 32
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 9
	Expr:  List.    (8)

	.  reduce 8 (src line 69)


state 10
	Expr:  Map.    (9)

	.  reduce 9 (src line 70)


state 11
	Expr:  App.    (10)

	.  reduce 10 (src line 71)


state 12
	Expr:  Ref.    (11)
	Ref:  Ref.DOT IDENTIFIER 

	DOT  shift 33
	.  reduce 11 (src line 72)


state 13
	Expr:  NOT.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 34
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 14
	Expr:  SUB.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 35
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 15
	List:  LSBRACKET.Items RSBRACKET 
	Items: .    (36)

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  reduce 36 (src line 105)

	Expr  goto 37
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10
	Items  goto 36

state 16
	Map:  LCBRACKET.KVs RCBRACKET 
	KVs: .    (40)

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  reduce 40 (src line 115)

	Expr  goto 39
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10
	KVs  goto 38

state 17
	Ref:  IDENTIFIER.    (27)
	App:  IDENTIFIER.LBRACKET Params RBRACKET 

	LBRACKET  shift 40
	.  reduce 27 (src line 91)


state 18
	Expr:  Expr EQ.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 41
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 19
	Expr:  Expr PRIORITY.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 42
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 20
	Expr:  Expr LT.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 43
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 21
	Expr:  Expr LTE.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 44
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 22
	Expr:  Expr GT.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 45
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 23
	Expr:  Expr GTE.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 46
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 24
	Expr:  Expr ADD.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 47
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 25
	Expr:  Expr SUB.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 48
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 26
	Expr:  Expr MUL.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 49
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 27
	Expr:  Expr DIV.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 50
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 28
	Expr:  Expr AND.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 51
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 29
	Expr:  Expr OR.Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 52
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 30
	Ref:  Expr LSBRACKET.Expr RSBRACKET 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 53
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 31
	Expr:  LBRACKET Expr.RBRACKET 
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	LSBRACKET  shift 30
	OR  shift 29
	AND  shift 28
	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	RBRACKET  shift 54
	.  error


state 32
	Expr:  IF Expr.THEN Expr ELSE Expr 
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	THEN  shift 55
	LSBRACKET  shift 30
	OR  shift 29
	AND  shift 28
	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  error


state 33
	Ref:  Ref DOT.IDENTIFIER 

	IDENTIFIER  shift 56
	.  error


state 34
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Expr:  NOT Expr.    (24)
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 24 (src line 85)


state 35
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Expr:  SUB Expr.    (25)
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	.  reduce 25 (src line 86)


state 36
	List:  LSBRACKET Items.RSBRACKET 
	Items:  Items.COMMA Items 

	RSBRACKET  shift 57
	COMMA  shift 58
	.  error


state 37
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 
	Items:  Expr.    (35)

	LSBRACKET  shift 30
	OR  shift 29
	AND  shift 28
	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 35 (src line 104)


state 38
	Map:  LCBRACKET KVs.RCBRACKET 
	KVs:  KVs.COMMA KVs 

	COMMA  shift 60
	RCBRACKET  shift 59
	.  error


state 39
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 
	KVs:  Expr.COLON Expr 

	LSBRACKET  shift 30
	OR  shift 29
	AND  shift 28
	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	COLON  shift 61
	.  error


state 40
	App:  IDENTIFIER LBRACKET.Params RBRACKET 
	Params: .    (32)

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  reduce 32 (src line 99)

	Expr  goto 63
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10
	Params  goto 62

state 41
	Expr:  Expr.EQ Expr 
	Expr:  Expr EQ Expr.    (12)
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 12 (src line 73)


state 42
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr PRIORITY Expr.    (13)
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	.  reduce 13 (src line 74)


state 43
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr LT Expr.    (14)
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 14 (src line 75)


state 44
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr LTE Expr.    (15)
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 15 (src line 76)


state 45
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr GT Expr.    (16)
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 16 (src line 77)


state 46
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr GTE Expr.    (17)
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 17 (src line 78)


state 47
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr ADD Expr.    (18)
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 18 (src line 79)


state 48
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr SUB Expr.    (19)
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 19 (src line 80)


state 49
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr MUL Expr.    (20)
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	PRIORITY  shift 19
	.  reduce 20 (src line 81)


state 50
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr DIV Expr.    (21)
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	PRIORITY  shift 19
	.  reduce 21 (src line 82)


state 51
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr AND Expr.    (22)
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 22 (src line 83)


state 52
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Expr:  Expr OR Expr.    (23)
	Ref:  Expr.LSBRACKET Expr RSBRACKET 

	AND  shift 28
	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  reduce 23 (src line 84)


state 53
	Expr:  Expr.EQ Expr 
	Expr:  Expr.PRIORITY Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.ADD Expr 
	Expr:  Expr.SUB Expr 
	Expr:  Expr.MUL Expr 
	Expr:  Expr.DIV Expr 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Ref:  Expr.LSBRACKET Expr RSBRACKET 
	Ref:  Expr LSBRACKET Expr.RSBRACKET 

	LSBRACKET  shift 30
	RSBRACKET  shift 64
	OR  shift 29
	AND  shift 28
	EQ  shift 18
	LT  shift 20
	LTE  shift 21
	GT  shift 22
	GTE  shift 23
	ADD  shift 24
	SUB  shift 25
	MUL  shift 26
	DIV  shift 27
	PRIORITY  shift 19
	.  error


state 54
	Expr:  LBRACKET Expr RBRACKET.    (6)

	.  reduce 6 (src line 67)


state 55
	Expr:  IF Expr THEN.Expr ELSE Expr 

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  error

	Expr  goto 65
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10

state 56
	Ref:  Ref DOT IDENTIFIER.    (28)

	.  reduce 28 (src line 92)


state 57
	List:  LSBRACKET Items RSBRACKET.    (33)

	.  reduce 33 (src line 101)


state 58
	Items:  Items COMMA.Items 
	Items: .    (36)

	IF  shift 8
	LSBRACKET  shift 15
	NOT  shift 13
	SUB  shift 14
	NUMBER  shift 3
	STRING  shift 4
	BOOLEAN  shift 5
	NULL  shift 6
	IDENTIFIER  shift 17
	LBRACKET  shift 7
	LCBRACKET  shift 16
	.  reduce 36 (src line 105)

	Expr  goto 37
	Ref  goto 12
	App  goto 11
	List  goto 9
	Map  goto 10
	Items  goto 66

state 59
	Map:  LCBRACKET KVs RCBRACKET.    (37)

	.  reduce 37 (src line 107)


state 60
	KVs:  KVs COMMA.KVs 
	KVs: .    (40)
